[gd_scene load_steps=59 format=2]

[ext_resource path="res://addons/angelica/Themes/SuperButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/OpenPathMusic44v1/flexatone.wav" type="AudioStream" id=2]
[ext_resource path="res://addons/angelica/Alerts/Rest.gd" type="Script" id=3]
[ext_resource path="res://img/yoga/rect893c.png" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.152941, 0.0352941, 0.207843, 0.678431 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.266667, 0.160784, 0.282353, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 64, 77 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 384, 0, 64, 77 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 64, 77 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 576, 0, 64, 77 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 640, 0, 64, 77 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 704, 0, 64, 77 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 768, 0, 64, 77 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 832, 0, 64, 77 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 896, 0, 64, 77 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 960, 0, 64, 77 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 64, 77 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 64, 77 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 64, 77 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 64, 77 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 256, 0, 64, 77 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 320, 0, 64, 77 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 384, 0, 64, 77 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 448, 0, 64, 77 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 512, 0, 64, 77 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 576, 0, 64, 77 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 640, 0, 64, 77 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 704, 0, 64, 77 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 768, 0, 64, 77 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 832, 0, 64, 77 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 896, 0, 64, 77 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 960, 0, 64, 77 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1024, 0, 64, 77 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1088, 0, 64, 77 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1152, 0, 64, 77 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1216, 0, 64, 77 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1280, 0, 64, 77 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1344, 0, 64, 77 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1408, 0, 64, 77 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1472, 0, 64, 77 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1536, 0, 64, 77 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1600, 0, 64, 77 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1664, 0, 64, 77 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1728, 0, 64, 77 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1792, 0, 64, 77 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1856, 0, 64, 77 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1920, 0, 64, 77 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1984, 0, 64, 77 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 2048, 0, 64, 77 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 2112, 0, 64, 77 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 2176, 0, 64, 77 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 2240, 0, 64, 77 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 2304, 0, 64, 77 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 2368, 0, 64, 77 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 2432, 0, 64, 77 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 2496, 0, 64, 77 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 2560, 0, 64, 77 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 2624, 0, 64, 77 )

[sub_resource type="SpriteFrames" id=54]
animations = [ {
"frames": [  ],
"loop": true,
"name": "invert",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "surya",
"speed": 2.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ) ],
"loop": true,
"name": "complete",
"speed": 0.2
} ]

[node name="Rest" type="Node2D"]
position = Vector2( 94.0375, 123.612 )
script = ExtResource( 3 )

[node name="TimeOut" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[node name="Panel" type="Panel" parent="."]
margin_right = 317.0
margin_bottom = 127.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 78.7783
margin_top = 15.0955
margin_right = 276.779
margin_bottom = 49.0955
bbcode_text = "Hello this is important!
Please take a break!"
text = "Hello this is important!
Please take a break!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 26.5455
margin_top = 54.8728
margin_right = 224.546
margin_bottom = 109.873
bbcode_text = "Next Short Pause in
Next Long Pause in
Next Yoga Pause in "
text = "Next Short Pause in
Next Long Pause in
Next Yoga Pause in "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShotPause" type="RichTextLabel" parent="."]
margin_left = 159.513
margin_top = 54.5128
margin_right = 237.513
margin_bottom = 72.5128
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LongPause" type="RichTextLabel" parent="."]
margin_left = 160.262
margin_top = 69.6781
margin_right = 238.262
margin_bottom = 87.6781
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YogaPause" type="RichTextLabel" parent="."]
margin_left = 159.327
margin_top = 87.1091
margin_right = 226.327
margin_bottom = 104.109
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SuperButton" parent="." instance=ExtResource( 1 )]

[node name="Blink" type="Timer" parent="."]
wait_time = 6.0
autostart = true

[node name="Rest" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[node name="Yoga" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[node name="Label" type="Label" parent="."]
margin_left = 214.0
margin_top = 32.0
margin_right = 289.0
margin_bottom = 52.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Alarm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="Updater" type="Timer" parent="."]
autostart = true

[node name="yoga" type="AnimatedSprite" parent="."]
modulate = Color( 3.66, 2.16, 5.2, 1 )
position = Vector2( 252.125, 64.3192 )
frames = SubResource( 54 )
animation = "complete"
frame = 13
playing = true

[connection signal="timeout" from="TimeOut" to="." method="_on_TimeOut_timeout"]
[connection signal="timeout" from="Blink" to="." method="_on_Blink_timeout"]
[connection signal="timeout" from="Rest" to="." method="_on_Rest_timeout"]
[connection signal="timeout" from="Yoga" to="." method="_on_Yoga_timeout"]
[connection signal="timeout" from="Updater" to="." method="_on_Updater_timeout"]
